Use List.of() for only one arg